Add DNS to fix cert

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,9 @@ jobs:
         scp -o StrictHostKeyChecking=no -i private_key \
             deploy_script.sh               "$USER_NAME@$SSH_TARGET:/home/ec2-user/"
 
+    # ─────────────────────────────────────────────────────────────
+    # 6.  Run deployment script on EC2
+    # ─────────────────────────────────────────────────────────────
     - name: Run deployment script on EC2
       run: |
         SSH_TARGET=${{ steps.resolve.outputs.ip }}
@@ -58,3 +61,26 @@ jobs:
           chmod +x ~/deploy_script.sh
           ~/deploy_script.sh
         "
+
+    # ─────────────────────────────────────────────────────────────
+    # 7.  **Hard-patch Nginx file exactly the way you do it by hand**
+    # ─────────────────────────────────────────────────────────────
+    - name: Hard-patch lifeline.conf and reload Nginx
+      run: |
+        SSH_TARGET=${{ steps.resolve.outputs.ip }}
+        ssh -o StrictHostKeyChecking=no -i private_key "$USER_NAME@$SSH_TARGET" '
+          # replace any literal $HOSTNAME with the real one
+          sudo sed -i -E "s/\\\$?HOSTNAME/lifeline-kaus.duckdns.org/g" \
+              /etc/nginx/conf.d/lifeline.conf
+
+          # collapse “listen 443 ssl http2;” → “listen 443 ssl;”
+          # then ensure ONE “http2 on;” right after
+          sudo sed -i -E "
+            s/^( *listen[[:space:]]+443[[:space:]]+ssl)[[:space:]]+http2;/\1;/;
+            /http2 on;/d
+          " /etc/nginx/conf.d/lifeline.conf
+          sudo sed -i -E "/listen[[:space:]]+443[[:space:]]+ssl;/a\    http2 on;" \
+              /etc/nginx/conf.d/lifeline.conf
+
+          sudo nginx -t && sudo systemctl reload nginx
+        '
