Add DNS to fix cert

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ jobs:
       DJANGO_SECRET_KEY:   ${{ secrets.DJANGO_SECRET_KEY }}
       OPENAI_API_KEY:      ${{ secrets.OPENAI_API_KEY }}
       LETSENCRYPT_EMAIL:   ${{ secrets.LETSENCRYPT_EMAIL }}    # optional
+      DUCKDNS_TOKEN:       ${{ secrets.DUCKDNS_TOKEN }}        # optional for auto DNS updates
 
     steps:
     # ─────────────────────────────────────────────────────────────
@@ -80,6 +81,7 @@ jobs:
           export DJANGO_SECRET_KEY='$DJANGO_SECRET_KEY'
           export OPENAI_API_KEY='$OPENAI_API_KEY'
           export LETSENCRYPT_EMAIL='$LETSENCRYPT_EMAIL'
+          export DUCKDNS_TOKEN='$DUCKDNS_TOKEN'
           chmod +x ~/deploy_script.sh
           ~/deploy_script.sh
         "
