kaus/imrpove-agent-performance (#49)
* feat(admin): redesign user overview page with improved tabs and visual hierarchy

- Remove redundant statistics cards (8 → 4 essential metrics)
- Transform plain text tab links into professional UI components with gradients and animations
- Fix visual overlap between stats grid and tab content sections
- Add enhanced styling for conversation and memory items with hover effects
- Implement proper spacing and padding throughout the interface
- Add gradient text effects for section titles and decorative underlines
- Improve empty states with icons and better messaging
- Enhance responsive design for mobile devices
- Create cohesive dark theme color scheme across all components

The tabs now look like proper UI elements rather than simple links, and the page has clear visual separation between sections.

* docs/chore: enhance Gmail MCP Connector integration docs and fix OAuth callback redirect

- Update Gmail OAuth callback to redirect to React frontend settings via FRONTEND_URL
- Revise README: include ConnectorsTab component, MCP utils, and Gmail MCP in architecture overview
- Update component/system diagrams to show Google OAuth and Gmail API flows
- Expand UML class diagram with MCPConnector and MCPOperation models and proper relationships
- Add detailed Gmail OAuth integration guide, env var references, and troubleshooting tips

* MCp + chat

* fix: Resolve UserSettings modal layout and styling issues

- Fix critical CSS structure error where .tab-button.active contained misplaced flexbox properties
- Ensure modal has solid opaque background (#1a1a2e) instead of transparent
- Enable proper vertical scrolling within settings content area
- Fix tab layout to display in single row with proper flexbox configuration
- Improve inactive tab visibility with subtle background and brighter text
- Add flex-shrink: 0 to header and tabs to prevent layout collapse
- Set default model to gpt-5-mini-2025-08-07 and chat mode to agent
- Fix Con

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,14 +2,20 @@
 # server
 django
 djangorestframework
+djangorestframework-simplejwt
 django-cors-headers
 gunicorn
+psycopg2-binary
 
 # ai
 openai
 langchain
 langgraph
+langchain-openai
 tiktoken
+langchain-mcp-adapters
+mcp
+dotenv
 
 # comms
 twilio
