--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,7 @@ tiktoken
 langchain-mcp-adapters
 mcp
 dotenv
+dotenv-cli
 
 # comms
 twilio
@@ -25,6 +26,7 @@ numpy
 
 # connectors
 google-auth
-google-auth-oauthlib
-google-auth-httplib2
-google-api-python-client
+google-auth-oauthlib==1.2.0
+google-api-python-client==2.139.0
+googleapis-common-protos==1.63.1
+requests
